--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -23,8 +23,7 @@
                         <hr>
                         <form method="POST" id="update_form" action="" enctype="multipart/form-data">
                             <div class="p-1 mb-2 mt-3 bg-secondary" style="font-weight: 500;
-                            font-size: 13px">Student's Personal Detail<span class="text-danger">
-                            *</span></div>
+                            font-size: 13px; color: white;">Student's Personal Detail</div>
                             <!-- student's detail -->
                             <div class="student">
                                 <div class="row">
@@ -42,48 +41,69 @@
 
                                 </div>
                                 <hr>
+                                <div class="row ">
+                                    <div class="col-sm-4 form-group">
+                                        <label for="cid">CID:</label>
+                                        <input type="text" class="form-control" value="{{std.student_cid}}" name="cid"
+                                            id="cid" disabled>
+                                    </div>
+                                    <div class="col-sm-4 form-group">
+                                        <label>First Name:</label>
+                                        <input type="text" class="form-control" value="{{std.first_name}}"
+                                            name="first_name" id="first_name" disabled>
+                                    </div>
+
+                                    <div class="col-sm-4 form-group">
+                                        <label>Last Name:</label>
+                                        <input type="text" value="{{std.last_name}}" class="form-control"
+                                            name="last_name" id="last_name" disabled>
+                                    </div>
+                                </div>
 
                                 <div class="row ">
                                     <div class="col-sm-4 form-group">
-                                        <p><b>CID:</b><br>
-                                            {{std.student_cid}}</p>
-
-
+                                        <label>Gender:</label>
+                                        <input type="text" class="form-control" value="{{std.gender}}" name="gender"
+                                            id="gender" disabled>
                                     </div>
                                     <div class="col-sm-4 form-group">
-                                        <p><b>First Name:</b><br> {{std.first_name}}</p>
+                                        <label>Date of Birth:</label>
+                                        <input type="text" class="form-control" value="{{std.dob}}" name="dob" id="dob"
+                                            disabled>
                                     </div>
 
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Last Name:</b><br> {{std.last_name}}</p>
+                                        <label>Email Address:</label>
+                                        <input type="text" value="{{std.student_email}}" class="form-control"
+                                            name="email_add" id="email_add" disabled>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Gender:</b> <br>{{std.gender}}</p>
-                                    </div>
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Date of Birth:</b><br> {{std.dob}}</p>
-                                    </div>
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Email Address:</b> <br>{{std.student_email}}</p>
-                                    </div>
 
-                                </div>
                                 <div class="row ">
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Dzongkhag:</b> <br>{{std_info.dzo_name}}</p>
+                                        <label>Dzongkhag:</label>
+                                        <input type="text" class="form-control" value="{{std_info.dzo_name}}"
+                                            name="per_dzongkhag" id="per_dzongkhag" disabled>
                                     </div>
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Gewog:</b><br> {{std_info.gewog_name}}</p>
+                                        <label>Gewog:</label>
+                                        <input type="text" class="form-control" value="{{std_info.gewog_name}}"
+                                            name="per_gewog" id="per_gewog" disabled>
                                     </div>
+
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Village:</b><br> {{std_info.village_name}}</p>
+                                        <label>Village:</label>
+                                        <input type="text" value="{{std_info.village_name}}" class="form-control"
+                                            name="per_village" id="per_village" disabled>
                                     </div>
                                 </div>
+
                                 <div class="row">
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Phone Number:</b> <br>{{std.student_phone_number}}</p>
+                                        <label>Phone Number:</label>
+                                        <input type="text" value="{{std.student_phone_number}}" class="form-control"
+                                            name="phone_num" id="phone_num" disabled>
+
                                     </div>
                                 </div>
                             </div>
@@ -91,43 +111,65 @@
                             <!-- ends student's details -->
                             <!-- Academic details -->
                             <div class="p-1 mb-2 mt-3 bg-secondary" style="font-weight: 500;
-                    font-size: 13px">Academic Detail<span class="text-danger">
-                                    *</span></div>
+                    font-size: 13px; color: white;">Academic Detail</div>
                             <div class="academic">
                                 <div class="row ">
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Index Number:</b><br> {{std.index_number}}</p>
+                                        <label>Index Number:</label>
+                                        <input type="text" class="form-control" value="{{std.index_number}}"
+                                            name="index_num" id="index_num" disabled>
                                     </div>
-
                                     <div class="col-sm-4 form-group" {% if(std.student_code=='' ) %} hidden {% endif %}>
-                                        <p><b>Student Code:</b> <br>{{std.student_code}}</p>
+                                        <label>Student Code:</label>
+                                        <input type="text" class="form-control" value="{{std.student_code}}"
+                                            name="std_code" id="std_code" disabled>
                                     </div>
 
                                     <div class="col-sm-4 form-group" {% if(std.bcse_x=='' ) %} hidden {% endif %}>
-                                        <p><b>BCSE (Class X):</b> <br>{{std.bcse_x}}</p>
+                                        <label>BCSE (Class X):</label>
+                                        <input type="text" value="{{std.bcse_x}}" class="form-control" name="class_x"
+                                            id="class_x" disabled>
                                     </div>
+
                                     <div class="col-sm-4 form-group" {% if(std.bhsec_xii=='' ) %} hidden {% endif %}>
-                                        <p><b>BHSEC (Class XII):</b><br> {{std.bhsec_xii}}</p>
+                                        <label>BHSEC (Class XII):</label>
+                                        <input type="text" class="form-control" value="{{std.bhsec_xii}}"
+                                            name="class_XII" id="class_XII" disabled>
                                     </div>
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Accommodation (if admitted):</b> <br>{{std.accommodation}}</p>
+                                        <label>Accommodation (if admitted):</label>
+                                        <input type="text" class="form-control" value="{{std.accommodation}}"
+                                            name="accommodation" id="accommodation" disabled>
                                     </div>
+
                                     <div class="col-sm-4 form-group">
-                                        <p><b>Admission for? (Enter class):</b><br> {{std.admission_for_class}}</p>
+                                        <label>Admission for? (Enter class):</label>
+                                        <input type="text" value="{{std.admission_for_class}}" class="form-control"
+                                            name="admission" id="admission" disabled>
                                     </div>
+
 
                                     <div class="col-sm-4 form-group" {% if(std.previous_school_name=='' ) %} hidden {%
                                         endif %}>
-                                        <p><b>Previous School:</b><br> {{std.previous_school_name}}</p>
+                                        <label>Previous School:</label>
+                                        <input type="text" class="form-control" value="{{std.previous_school_name}}"
+                                            name="previous_school" id="previous_school" disabled>
                                     </div>
                                     <div class="col-sm-4 form-group" {% if(std.stream==None ) %} hidden {% endif %}>
-                                        <p><b>Stream:</b><br> {{std.stream}}</p>
+                                        <label>Stream:</label>
+                                        <input type="text" class="form-control" value="{{std.stream}}" name="stream"
+                                            id="stream" disabled>
+                                    </div>
+
+                                    <div class="col-sm-4 form-group">
+                                        <label>SUPW Grade:</label>
+                                        <input type="text" value="{{std.supw_grade}}" class="form-control" name="supw"
+                                            id="supw" disabled>
                                     </div>
                                     <div class="col-sm-4 form-group">
-                                        <p><b>SUPW Grade:</b><br> {{std.supw_grade}}</p>
-                                    </div>
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Percentage:</b> <br>{{std.percentage_obtained}}%</p>
+                                        <label>Percentage:</label>
+                                        <input type="text" value="{{std.percentage_obtained}}%" class="form-control"
+                                            name="percentage" id="percentage" disabled>
                                     </div>
                                 </div>
 
@@ -146,42 +188,55 @@
                             <!-- Academic detail end -->
 
                             <div class=" p-1 mb-2 mt-3 bg-secondary" style="font-weight: 500;
-                    font-size: 13px">Parent's/gaurdian's Detail<span class="text-danger"> *</span>
+                    font-size: 13px; color: white;">Parent's/gaurdian's Detail
                             </div>
                             <div class="row">
                                 <div class="col-sm-4 form-group">
-                                    <p><b>CID:</b> <br>{{std.parent_cid}}</p>
-                                </div>
-                                <div class="col-sm-4 form-group">
-                                    <p><b>Name:</b><br> {{std.parent_full_name}}</p>
+                                    <label>CID:</label>
+                                    <input type="text" class="form-control" value="{{std.parent_cid}}" name="par_cid"
+                                        id="par_cid" disabled>
                                 </div>
 
                                 <div class="col-sm-4 form-group">
-                                    <p><b>Phone Number:</b> <br>{{std.parent_contact_number}}</p>
+                                    <label>Parent Name:</label>
+                                    <input type="text" value="{{std.parent_full_name}}" class="form-control"
+                                        name="par_name" id="par_name" disabled>
                                 </div>
-                            </div>
-                            <div class="row">
                                 <div class="col-sm-4 form-group">
-                                    <p><b>Email Address:</b> <br>{{std.parent_email}}</p>
+                                    <label>Phone Number:</label>
+                                    <input type="text" value="{{std.parent_contact_number}}" class="form-control"
+                                        name="par_number" id="par_number" disabled>
                                 </div>
+
+                                <div class="col-sm-4 form-group">
+                                    <label>Email Address:</label>
+                                    <input type="text" value="{{std.parent_email}}" class="form-control"
+                                        name="par_email" id="par_email" disabled>
+                                </div>
+
                             </div>
 
                             <div class=" p-1 mb-2 mt-3 bg-secondary" style="font-weight: 500;
-                    font-size: 13px">Present Address Detail<span class="text-danger"> *</span></div>
+                    font-size: 13px; color: white;">Present Address Detail</div>
                             <div class="row">
-                                <div class="row col-lg-12">
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Dzongkhag:</b><br> {{std.dzo_name}}</p>
-                                    </div>
-                                    <div class="col-sm-4 form-group">
-
-                                        <p><b>Gewog:</b> <br>{{std.gewog_name}}</p>
-
-                                    </div>
-                                    <div class="col-sm-4 form-group">
-                                        <p><b>Village:</b><br> {{std.village_name}}</p>
-                                    </div>
+                                <div class="col-sm-4 form-group">
+                                    <label>Dzongkhag:</label>
+                                    <input type="text" class="form-control" value="{{std.dzo_name}}" name="pre_dzongkhag"
+                                        id="pre_dzongkhag" disabled>
                                 </div>
+
+                                <div class="col-sm-4 form-group">
+                                    <label>Gewog:</label>
+                                    <input type="text" value="{{std.gewog_name}}" class="form-control"
+                                        name="per_gewog" id="per_gewog" disabled>
+                                </div>
+                                <div class="col-sm-4 form-group">
+                                    <label>Village:</label>
+                                    <input type="text" value="{{std.village_name}}" class="form-control"
+                                        name="per_village" id="per_village" disabled>
+                                </div>
+
+                              
                             </div>
                             <hr>
                             <div class="row">
@@ -193,8 +248,9 @@
                                         <label class="form-control-label col-form-label" for="action">Action</label>
                                         <select name="action" id="action" class="form-control form-control-sm">
                                             <option value="">Select Action</option>
-                                            <option value="returned">Return Application</option>
                                             <option value="approved">Approved Application</option>
+                                            <option value="reject For Amendment">Reject For Amendment</option>
+                                            <option value="returned">Reject Application</option>
                                         </select>
                                         <span class="invalid-feedback">Please select action type</span>
                                     </div>
