--- a/app/home/templates/std_result.html
+++ b/app/home/templates/std_result.html
@@ -87,6 +87,12 @@
                 </tr>        
             </tbody>
         </table>
+        <hr>
+        <h4 class="card-title">Student Individual Remarks</h4>
+                                    <p><b>Punctuality:</b> Outstanding</p>
+                                    <p><b>Discipline:</b> Very Good</p>
+                                    <p><b>Social Service:</b> Outstanding</p>
+                                    <p><b>Leadership Quality:</b> Outstanding</p>
     </div>
 </div>    
 {% endblock content %}
