--- a/app/subject_teacher/templates/partials/_subject_sidebar.html
+++ b/app/subject_teacher/templates/partials/_subject_sidebar.html
@@ -17,6 +17,7 @@
         <ul class="nav flex-column sub-menu" style="background: white;">
           <!-- <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Add Student</a></li> -->
           <li class="nav-item"><a class="nav-link" href="{{url_for('subject_teacher_blueprint.view_std_table')}}" style="color: #5c5656;"> Student List</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="{{url_for('subject_teacher_blueprint.view_std_gradings')}}" style="color: #5c5656;"> Student Grades</a></li> -->
         </ul>
       </div>
     </li>
