--- a/app/admin/templates/pages/user-feedback/feedback.html
+++ b/app/admin/templates/pages/user-feedback/feedback.html
@@ -15,7 +15,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
           <div class="col-lg-12 grid-margin">
               <div class="card">
                   <div class="card-body">
-                      <h4 class="card-title">List of User Inqueries</h4>
+                      <h4 class="card-title">User Inqueries</h4>
                       <hr>
                       <div class="card-body">
                           <div class="row">
@@ -27,7 +27,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                                             <th scope="col" class="col-2" data-sort="name">Username</th>
                                             <th scope="col" class="col-2" data-sort="name">Email</th>
                                             <th scope="col" class="col-2" data-sort="budget">Phone Number</th>
-                                            <th scope="col" class="col-5" style="text-align:center;">Comment</th>
+                                            <th scope="col" class="col-2" data-sort="budget">Comment</th>
                                         </tr>
                                     </thead>
                                     <tbody class="list">
